--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,16 +16,11 @@
 <body>
  <div class="container">
    <div class="card">
-     <img src="images/image-qr-code.png" alt="image-qr-code" width="250px" height="250px">
+     <img src="images/image-qr-code.png" alt="QR code"></div>
      <h1>Improve your front-end skills by building projects</h1>
      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
    </div>
-   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/surfruit">Surfruit</a>.
-  </div>
-
   </div>
 </body>
 
