--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <title>Frontend Mentor | QR code component</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+    <title>QR Code Component Main</title>
 </head>
 
 <body>
- <div class="container">
-   <div class="card">
-     <img src="images/image-qr-code.png" alt="QR code"></div>
-     <h1>Improve your front-end skills by building projects</h1>
-     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-    </p>
-   </div>
-  </div>
+    <!-- QR Container -->
+    <main class="qr-container">
+        <div class="img-block"><img src="images/image-qr-code.png" alt="QR code"></div>
+        <div class="info-block">
+            <h1>Improve your front-end skills by building projects</h1>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+
+    </main>
+
 </body>
 
 </html>
